New Deposit JS Added

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
           <div class="bg-green-400 p-8 rounded-xl">
             <h4 class="text-2xl">Deposit</h4>
             <h2 class="text-5xl">
-              <span>$</span> <span id="total-deposit"></span>
+              <span>$</span><span id="total-deposit">00</span>
             </h2>
           </div>
           <div class="bg-yellow-400 p-8 rounded-xl">
             <h4 class="text-2xl">Withdraw</h4>
             <h2 class="text-5xl">
-              <span>$</span> <span id="total-withdraw"></span>
+              <span>$</span><span id="total-withdraw">00</span>
             </h2>
           </div>
           <div class="bg-violet-400 p-8 rounded-xl">
             <h4 class="text-2xl">Balance</h4>
             <h2 class="text-5xl">
-              <span>$</span> <span id="total-balance"></span>
+              <span>$</span><span id="total-balance">1240</span>
             </h2>
           </div>
         </div>
